--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,4 +1,4 @@
-<h5 class="mb-3">Mundana Jekyll Theme</h5>
+<h5 class="mb-3">Shriram's Theme</h5>
 
 <p>Hi! The website you are previewing is a demonstration for Mundana Jekyll theme, hosted on Github, made by <a href="https://www.wowthemes.net/donate/">Sal</a>.</p>
 
