--- a/src/components/container.astro
+++ b/src/components/container.astro
@@ -1,11 +1,18 @@
 ---
-const { class: className } = Astro.props;
 ---
 
-<div
-  class:list={[
-    "container px-8 py-5 lg:py-8 mx-auto xl:px-5 max-w-screen-lg",
-    className,
-  ]}>
+
+<style>
+  .container {
+    width: 100%;
+    margin: 0 auto;
+    max-width: var(--container-max-width, 960px);
+    padding: var(--container-padding, 1rem);
+  }
+</style>
+
+<div class="container">
   <slot />
 </div>
+
+
