--- a/src/components/footer.astro
+++ b/src/components/footer.astro
@@ -1,41 +1,93 @@
 ---
-import Container from "./container.astro";
-import Themeswitch from "./themeswitch.astro";
+import { settings } from "../data/settings";
+import Container from "./Container.astro";
+import SocialList from './SocialList.astro';
+import LittleSticksPlug from "./LittleSticksPlug.astro";
 ---
 
-<Container class="mt-10 border-t border-gray-100 dark:border-gray-800">
-  <footer class="flex flex-col items-center">
-    <div class="text-sm text-center">
-      Copyright © {new Date().getFullYear()} Stablo. All rights reserved.
+<footer>
+  <Container>
+    <div class="footer-links__grid">
+      <ul>
+        <li><strong>Company</strong></li>
+        <li>About</li>
+        <li>Blog</li>
+      </ul>
+      <ul>
+        <li><strong>Products</strong></li>
+        <li>Store</li>
+        <li>Merch</li>
+      </ul>
+      <ul>
+        <li><strong>Support</strong></li>
+        <li>Discord</li>
+        <li>Contact Us</li>
+      </ul>
+      <ul>
+        <li><strong>Legal</strong></li>
+        <li>Privacy</li>
+        <li>Terms</li>
+      </ul>
     </div>
-    <div
-      class="flex justify-center gap-1 mt-1 text-sm text-center text-gray-500 dark:text-gray-600">
-      <span>
-        Made by{" "}
-        <a
-          href="https://web3templates.com/?ref=stablo-astro"
-          rel="noopener"
-          target="_blank">
-          Web3Templates
-        </a>
-        <!--
-    Can we ask you a favor 🙏
-    Please keep this backlink on your website if possible.
-    or Purchase a commercial license from https://web3templates.com
-  -->
-      </span>
-      <span>&middot;</span>
-      <span>
-        <a
-          href="https://github.com/web3templates/stablo-astro"
-          rel="noopener"
-          target="_blank">
-          Github
-        </a>
-      </span>
+    <!-- You can delete this code or hide in the settings.ts file -->
+    {settings.showLittleSticksPlug && <div>
+     <LittleSticksPlug/>
+    </div>}
+    <div class="footer-bottom__container">
+      <p>&copy; {new Date().getFullYear()} {settings.name}</p>
+      <SocialList />
     </div>
-    <div class="flex items-center justify-between mt-2">
-      <Themeswitch />
-    </div>
-  </footer>
-</Container>
+  </Container>
+</footer>
+
+<style>
+  footer {
+    position: relative;
+    min-height: 200px;
+    background-color: var(--theme-footer-background);
+    color: var(--theme-on-footer-background);
+  }
+  .footer-links__grid {
+    padding: 10vh 0;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 1rem;
+  }
+  .footer-links__grid ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+  }
+  .footer-links__grid ul li:first-of-type {
+    margin-bottom: 0.5rem;
+  }
+  .footer-links__grid ul li strong {
+    font-weight: 900;
+  }
+  .footer-bottom__container {
+    position: relative;
+    bottom: 0;
+    padding: 0 0 1rem 0;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    font-size: var(--step--2);
+  }
+
+  @media(max-width: 768px) {
+    .footer-links__grid {
+      grid-template-columns: repeat(2, 1fr);
+    }
+  }
+  @media(max-width: 480px) {
+    .footer-links__grid {
+      grid-template-columns: 1fr;
+      gap: 2rem;
+    }
+    .footer-bottom__container {
+      flex-direction: column;
+      align-items: flex-start;
+      gap: 1rem;
+    }
+  }
+</style>
