--- a/src/components/NavComponent.astro
+++ b/src/components/NavComponent.astro
@@ -4,11 +4,12 @@ import logoForLight from '@/images/astro-logo-for-light-mode.svg'
 import logoForDark from '@/images/astro-logo-for-dark-mode.svg'
 
 const navigation = [
-  { href: '/#projects', title: 'Projects', newTab: false },
+  { href: '/blog', title: 'Blog', newTab: false },
+  // { href: '/#projects', title: 'Projects', newTab: false },
   { href: '/#about', title: 'About', newTab: false },
   { href: '/#contact', title: 'Contact', newTab: false },
   { href: '/tags', title: 'Tags', newTab: false },
-  { href: '/blog', title: 'Blog', newTab: false },
+  
 ]
 
 const pathname = Astro.url.pathname.split('/')[1]
