--- a/src/components/NavComponent.astro
+++ b/src/components/NavComponent.astro
@@ -6,8 +6,8 @@ import logoForDark from '@/images/astro-logo-for-dark-mode.svg'
 const navigation = [
   { href: '/blog', title: 'Blog', newTab: false },
   // { href: '/#projects', title: 'Projects', newTab: false },
-  { href: '/about', title: 'About', newTab: false },
-  { href: '/contact', title: 'Contact', newTab: false },
+  { href: '/#about', title: 'About', newTab: false },
+  { href: '/#contact', title: 'Contact', newTab: false },
   { href: '/tags', title: 'Tags', newTab: false },
   
 ]
