Update layout.astro with navigation and links

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -45,14 +45,14 @@ import { ViewTransitions } from 'astro:transitions'
       >
         <div class="text-sm">
           Copyright {new Date().getFullYear()}. View source on <a
-            href="https://github.com/drehimself/astro-portfolio-starter"
+            href="https://github.com/shriramtx"
             class="underline hover:text-gray-400">GitHub</a
           >.
         </div>
         <ul class="flex items-center space-x-8 mt-8 sm:mt-0">
           <li>
             <a
-              href="mailto:me@andremadarang.com"
+              href="mailto:shriramstrong@gmail.com"
               class="text-gray-100 hover:text-gray-400"
             >
               <svg
@@ -87,7 +87,7 @@ import { ViewTransitions } from 'astro:transitions'
 
           <li>
             <a
-              href="https://github.com/drehimself"
+              href="https://github.com/shriramtx"
               target="_blank"
               class="text-gray-100 hover:text-gray-400"
             >
@@ -105,7 +105,7 @@ import { ViewTransitions } from 'astro:transitions'
 
           <li>
             <a
-              href="https://twitter.com/drehimself"
+              href="https://twitter.com/ishrirams"
               target="_blank"
               class="text-gray-100 hover:text-gray-400"
             >
