--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -21,6 +21,9 @@ import { ViewTransitions } from 'astro:transitions'
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="generator" content={Astro.generator} />
     <title>{title} | Astro Portfolio Starter</title>
+    <Layout title="My Page Title">
+    </Layout>
+  
     <ViewTransitions />
 
     <script src="@/scripts/initialize-theme.ts"></script>
