--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -20,7 +20,7 @@ import { ViewTransitions } from 'astro:transitions'
     <meta name="viewport" content="width=device-width" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="generator" content={Astro.generator} />
-    <title>{title} | shriramtx </title> /adds title for the tab
+    <title>{title} | Shriramtx </title> /adds title for the tab
     <ViewTransitions />
 
     <script src="@/scripts/initialize-theme.ts"></script>
@@ -69,7 +69,7 @@ import { ViewTransitions } from 'astro:transitions'
 
           <li>
             <a
-              href="https://youtube.com/drehimself"
+              href="https://youtube.com/"
               target="_blank"
               class="text-gray-100 hover:text-gray-400"
             >
