--- a/src/components/NavComponent.astro
+++ b/src/components/NavComponent.astro
@@ -136,7 +136,7 @@ const pathname = Astro.url.pathname.split('/')[1]
       }
       <li>
         <a
-          href="https://github.com/drehimself/astro-portfolio-starter"
+          href="https://github.com/shriramtx"
           target="_blank"
           rel="noopener noreferrer"
           class="hover:text-gray-500 dark:hover:text-gray-300"
