--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -17,12 +17,12 @@ import avatarImage from '@/images/avatar.png'
     >
       <div class="text-4xl font-bold text-center sm:text-left">
         <div class="leading-tight dark:text-gray-100">
-          Astro Portfolio Starter
+          Shriram's Curiosity Chronicles
         </div>
         <div
           class="text-indigo-700 dark:text-indigo-500 leading-tight sm:mr-16"
         >
-          Powered by Astro and Tailwind CSS
+          A chronicle of experiences, insights, and discoveries.
         </div>
       </div>
       <div class="mt-8 sm:mt-0">
