--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,7 +3,8 @@ import Layout from '@/layouts/Layout.astro'
 import IconCheckmark from '@/components/IconCheckmark.astro'
 import Link from '@/components/Link.astro'
 import { Image } from 'astro:assets'
-import developerImage from '@/images/developer.svg'
+import Fireworks from '@/images/fireworks.svg'
+import Moonlight from '@/images/mooonlight.svg'
 import mindMapImage from '@/images/mind-map.svg'
 import codeReviewImage from '@/images/code-review.svg'
 import dotsTriangle from '@/images/dots-triangle.svg'
@@ -26,7 +27,7 @@ import avatarImage from '@/images/avatar.png'
         </div>
       </div>
       <div class="mt-8 sm:mt-0">
-        <Image src={developerImage} alt="developer" class="mx-auto sm:mx-0" />
+        <Image src={Fireworks} alt="developer" class="mx-auto sm:mx-0" />
       </div>
     </section>
     <!-- end hero -->
