--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -27,7 +27,7 @@ import avatarImage from '@/images/avatar.png'
         </div>
       </div>
       <div class="mt-8 sm:mt-0">
-        <Image src={Fireworks} alt="developer" class="mx-auto sm:mx-0" />
+        <Image src={Moonlight} alt="developer" class="mx-auto sm:mx-0" />
       </div>
     </section>
     <!-- end hero -->
