--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,7 +4,7 @@ import IconCheckmark from '@/components/IconCheckmark.astro'
 import Link from '@/components/Link.astro'
 import { Image } from 'astro:assets'
 import Fireworks from '@/images/fireworks.svg'
-import Moonlight from '@/images/mooonlight.svg'
+import Moonlight from '@/images/moonlight.svg'
 import mindMapImage from '@/images/mind-map.svg'
 import codeReviewImage from '@/images/code-review.svg'
 import dotsTriangle from '@/images/dots-triangle.svg'
