--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -16,7 +16,7 @@ import avatarImage from '@/images/avatar.png'
     <section
       class="hero mx-auto max-w-3xl flex flex-col sm:flex-row justify-between py-16 mt-24 px-4 xl:px-0"
     >
-      <div class="text-4xl font-bold text-center sm:text-center">
+      <div class="text-4xl font-bold text-center sm:text-left">
         <div class="leading-tight dark:text-gray-100">
           Shriram's Curiosity Chronicles
         </div>
