--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,6 +3,7 @@ import Layout from '@/layouts/Layout.astro'
 import IconCheckmark from '@/components/IconCheckmark.astro'
 import Link from '@/components/Link.astro'
 import { Image } from 'astro:assets'
+import DeveloperImage from '@/images/developer.svg'
 import Fireworks from '@/images/fireworks.svg'
 import Moonlight from '@/images/moonlight.svg'
 import mindMapImage from '@/images/mind-map.svg'
@@ -27,7 +28,7 @@ import avatarImage from '@/images/avatar.png'
         </div>
       </div>
       <div class="mt-8 sm:mt-0">
-        <Image src={Moonlight} alt="developer" class="mx-auto sm:mx-0" />
+        <Image src={DeveloperImage} alt="developer" class="mx-auto sm:mx-0" />
       </div>
     </section>
     <!-- end hero -->
